package model.events;

public class Concert extends Event {
}
