package model.events;

public class Sport extends Event {
}
