package model.users;

import model.events.Event;
import model.venues.Venue;

public class Admin extends User {

    public void addMember(User user) {
    }

    public void viewMember(String identifier) {
    }

    public void updateMember(String identifier) {
    }

    public void deleteMember(String identifier) {
    }

    public void addVenue(Venue venue) {
    }

    public void viewVenue(String identifier) {
    }

    public void updateVenue(String identifier) {
    }

    public void deleteVenue(String identifier) {
    }

    public void addEvent(Event event) {
    }

    public void viewEvent(String identifier) {
    }

    public void updateEvent(String identifier) {
    }

    public void deleteEvent(String identifier) {
    }
}
