package model.users;

public class Organizer extends User {

    public void createEvent() {
    }
}
