package model.venues;

public class Arena extends Venue {
}
