package model.venues;

public class OpenAir extends Venue {
}
