package model.venues;

public class Stadium extends Venue {
}
