package util;

public class Logger {

    public static void logAction(String actionDetail) {
    }
}
