@startuml name
skinparam classAttributeIconSize 0

abstract class User {
    - String firstName
    - String lastName
    - String username
    - String password
    - String userID
    + getFirstName(): String
    + setFirstName(String firstName)
    + getLastName(): String
    + setLastName(String lastName)
    + getUsername(): String
    + setUsername(String username)
    + getPassword(): String
    + setPassword(String password)
    + getUserID(): String
    + setUserID(String userID)
    + login()
    + logout()
}
class Customer {
    - double moneyAvailable
    - boolean hasMembership
    + getMoneyAvailable(): double
    + setMoneyAvailable(double moneyAvailable)
    + hasMembership(): boolean
    + setMembership(boolean hasMembership)
    + purchaseTicket()
}

class Organizer {
    + createEvent()
}

class Admin {
    + addMember(User user)
    + viewMember(String identifier)
    + updateMember(String identifier)
    + deleteMember(String identifier)
    + addVenue(Venue venue)
    + viewVenue(String identifier)
    + updateVenue(String identifier)
    + deleteVenue(String identifier)
    + addEvent(Event event)
    + viewEvent(String identifier)
    + updateEvent(String identifier)
    + deleteEvent(String identifier)
}

abstract class Event {
    - String eventID
    - String name
    - String date
    - String time
    - Venue venue
    + getEventID(): String
    + setEventID(String eventID)
    + getName(): String
    + setName(String name)
    + getDate(): String
    + setDate(String date)
    + getTime(): String
    + setTime(String time)
    + getVenue(): Venue
    + setVenue(Venue venue)
}

class Concert extends Event
class Sport extends Event
class Special extends Event

abstract class Venue {
    - String venueID
    - String name
    - String type
    - int capacity
    - double cost
    + getVenueID(): String
    + setVenueID(String venueID)
    + getName(): String
    + setName(String name)
    + getType(): String
    + setType(String type)
    + getCapacity(): int
    + setCapacity(int capacity)
    + getCost(): double
    + setCost(double cost)
}

class Arena extends Venue
class Auditorium extends Venue
class Stadium extends Venue
class OpenAir extends Venue

class RunTicketMiner {
    + {static} main(String[] args)
    + displayMainMenu()
}

class DataManager {
    + readCSV(String fileName)
    + writeEventCSV(String fileName)
    + writeCustomerCSV(String fileName)
    + writeVenueCSV(String fileName)
}

class Logger {
    + {static} logAction(String actionDetail)
}

' --- Relationships ---

User <|-- Customer 
User <|-- Organizer
User <|-- Admin

Event o-- Venue
Admin ..> User : manages
Admin ..> Venue : manages
Admin ..> Event : manages

RunTicketMiner ..> DataManager
RunTicketMiner ..> Logger : logs actions
@enduml